# My_Project

./: .gitignore  Dockerfile  LICENSE.txt  docker-compose.yml  pyproject.toml
FAST-USERS/migrations/: env.py
FAST-USERS/socket/: index.html  main_socket.py
JWT_AUTH/: README  README.md  crud.py  db.sqlite3
JWT_AUTH/api_v1/: __init__.py
JWT_AUTH/core/: config.py
JWT_AUTH/versions/: 2024_02_15_2122-035306228ff9_create_order_product_association_table.py  2024_02_16_1335-9a3855174ecf_add_count_column_to_order_product_.py  2024_02_16_2338-15da7d4ddd45_add_unit_price_column_to_order_product_.py
My_Project/: README.md  create_and_clean_branches.sh  pyproject.toml
My_Project/JWT_AUTH/: LICENSE.txt
My_Project/VooDoo/: config.py  orders.db
My_Project/app/: test.db
My_Project/ficha/: recursion.py
My_Project/my/: func.py  k-my.py  max1.py  sales.csv
Pet_Shop/: Dockerfile  Pets_Shop.postman_collection.json  docker-compose.override.yml  docker-compose.yml  manage.py  requirements.txt
Pet_Shop/Pet_Shop/: asgi.py  settings.py
VooDoo/: main.py  try.py
algoritms/lab01/: main.py  node.py
algoritms/lab02/: main.py  main2.py
algoritms/lab04/: main.py
algoritms/lab06/: main.py
algoritms/lab07/: main2.py
app/: crud.py  main.py  models.py  schemas.py
blog/: app.py
class_test/: testing_class.py
fastapi-application/: dnevnik  main.py
ficha/: binars_search.py  evklid.py  quick_sort.py  sort_puzir.py  xech_func.py
kubik/: main.py
my/: das.py  lab01.txt  mycode.py  sales.csv  shift-my.py
my/3/: test.py
socket/: websocket_client.js
web-app/: main.py
тестирование/: full_name.py  names.py  test.py
(+111 files in other folders)
